# UniversityProjects

./: .gitignore  LICENSE  README.md
DPPE-R/: CMakeLists.txt  Makefile.Unix
DPPE-R/mathlib/: CMakeLists.txt  DirichletProblem.h  DirichletProblem.hpp  Functions.cpp  GridOperations.h  GridOperations.hpp  MathCore.hpp
DPPE-R/src/: main.cpp
